# BFAST

./: .gitignore  CMakeLists.txt  config.h.cmake.in  default.nix
bfast/: AlignNTSpace.h  BLib.h  CMakeLists.txt  RGBinary.c  ScoringMatrix.h
butil/: CMakeLists.txt
scripts/: CMakeLists.txt
tests/: test.all.sh
